@@ -262,6 +262,8 @@ v2.4.0-beta1 (2014-12-26)
 v2.3.5 (2015-XX-XX)
 -------------------
 
+* fixed intermittent 404 errors in Foxx apps after mounting or unmounting apps
+
 * fixed issue #1200: Expansion operator results in "Cannot call method 'forEach' of null"
 
 * fixed issue #1199: Cannot unlink root node of plan
